src/test/test-models/bad/reserved/reinterpret_cast.stan
data {
  real reinterpret_cast;
}
model {
}
